--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="../pages/catalogues.html">Catalogue</a></li>
+                <li><a href="catalogues.html">Catalogue</a></li>
                 
-                <li><a href="../pages/evenement.html">Événements</a></li>
+                <li><a href="pages/evenement.html">Événements</a></li>
                 
             </ul>
         </nav>
@@ -107,3 +107,4 @@
     </footer>
 </body>
 </html>
+
