--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="catalogues.html">Catalogue</a></li>
+                <li><a href="pages/catalogues.html">Catalogue</a></li>
                 
                 <li><a href="pages/evenement.html">Événements</a></li>
                 
@@ -107,6 +107,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
